tests/kuttl/tests/ctlplane-tls-custom-route/02-deploy-custom-route-secret.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |
      source ../../common/create_custom_cert.sh
      INGRESS_DOMAIN=$(oc get ingresses.config.openshift.io cluster -o jsonpath='{.spec.domain}')
      create_barbican_placement_routes "${INGRESS_DOMAIN}" "${NAMESPACE}"

  - script: |
      # Generate ConfigMap for kustomize from the placement-custom-route secret
      bash ../../common/prepare_placement_certs.sh
