tests/kuttl/tests/ctlplane-tls-custom-route/03-deploy-openstack.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |
      oc kustomize ../../../../config/samples/tls/custom_route_cert | oc apply -n $NAMESPACE -f -
