tests/kuttl/tests/ctlplane-tls-custom-route/05-check-cert-deletion.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
commands:
  - script: |
      echo "Checking absence of barbican-public-route certificate..."
      if oc get certificate barbican-public-route -n $NAMESPACE; then
        echo "barbican-public-route certificate is found"
        exit 1
      else
        echo "barbican-public-route certificate is absent"
      fi
