tests/kuttl/tests/ctlplane-tls-custom-route/02-assert-custom-route-secret.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
commands:
  - script: bash ../../common/osp_check_route_cert.sh barbican
  - script: bash ../../common/osp_check_route_cert.sh placement
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: placement-cert-data
