tests/kuttl/tests/ctlplane-tls-custom-route/04-assert-custom-route-cert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
commands:
  - script: |
      echo "Checking barbican custom route certificate..."
      bash ../../common/osp_check_route_cert.sh "barbican"
